--- a/cv_2.tex
+++ b/cv_2.tex
@@ -8,11 +8,15 @@
 \usepackage[margin=0.7in]{geometry}
 \usepackage{fontawesome}
 \usepackage{hyperref}
+\hypersetup{
+    colorlinks=false,
+    pdfborder={0 0 0},
+}
 
 \usepackage{arev} % Default font is the helvetica postscript font
 %\usepackage{newcent} % To change the default font to the new century schoolbook postscript font uncomment this line and comment the one above
 
-\newcommand\sbullet[1][.5]{\mathbin{\vcenter{\hbox{\scalebox{#1}{$\bullet$}}}}}
+
 
 \setlength{\textwidth}{5.8in} % Text width of the document
 
@@ -22,7 +26,7 @@
 %	NAME AND ADDRESS SECTION
 %----------------------------------------------------------------------------------------
 
-\moveleft.5\hoffset\centerline{\huge\bf Abhinav Khare}\\% Your name at the top
+\moveleft.5\hoffset\centerline{\huge\bf Abhinav Khare}% Your name at the top
 
 %%\moveleft\hoffset\vbox{\hrule width 7in height 1pt}\smallskip % Horizontal line after name; adjust line thickness by changing the '1pt'
  
@@ -39,7 +43,7 @@
 \begin{itemize}
 \item Bachelors of Technology in Information Technology. 
 \item CGPA (After 6 semesters): 8.49/10
-\item \textbf{Relevant Coursework}: Software Engineering, Object Oriented Methodology, Database Management Systems, Operating Systems, Computer Organization & Architecture,Data Structures, Design, Analysis of Algorithms
+\item \textbf{Relevant Coursework}: Software Engineering, Object Oriented Methodology, Database Management Systems, Operating Systems, Computer Organization \& Architecture,Data Structures, Design, Analysis of Algorithms
 \end{itemize} 
 
 \section{EXPERIENCE}
@@ -88,7 +92,7 @@ Harvard University, Boston, MA
 
 
 \section{PUBLICATIONS}
-Khare, Abhinav, et al. "Trust-less Smart City: the #SmartME approach." {\sl Submitted to 5th IEEE World Forum in Limerick, Ireland, 2019.}  \hfill In review$
+Khare, Abhinav, et al. "Trust-less Smart City: the \#SmartME approach." {\sl Submitted to 5th IEEE World Forum in Limerick, Ireland, 2019.}  \hfill In review
 
 Khare, Abhinav, et al. "Learning the Goal Seeking Behaviour for Mobile Robots." {\sl 2018 3rd Asia-Pacific Conference on Intelligent Robot Systems (ACIRS). IEEE, 2018.} 
 
